# chess_machine

./: .gitignore
src/mirobot_description/: CMakeLists.txt  package.xml
src/mirobot_description/launch/: mirobot_rviz_control.launch.py
src/mirobot_description/src/: mirobot_gcode_writer.cpp
src/mirobot_driver/: package.xml  setup.cfg  setup.py
src/mirobot_driver/launch/: mirobot_driver.launch.py  mirobot_full_control.launch.py  mirobot_rviz.launch.py
src/mirobot_driver/mirobot_driver/: serial_bridge.py
src/mirobot_driver/scripts/: joint_relay.py  mirobot_xyz.py  send_joint_target.py
src/mirobot_master_slave/: package.xml  setup.cfg  setup.py
src/mirobot_master_slave/launch/: dual_mirobot_full_control.launch.py  mirobot_master_slave.launch.py
src/mirobot_master_slave/mirobot_master_slave/: init_joint_once.py  server_bridge.py
src/mirobot_master_slave/rviz/: dual_mirobots.rviz
src/mirobot_master_slave/src/: conveyor_controller_node.py  mirobot_roundtrip_sequencer.py  mirobot_sequential_replicator.py  mirobot_slave_replicator.py  mirobot_xyz_cli.py
src/mirobot_order_delivery/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/mirobot_order_delivery/config/: mirobot_domain_bridge.yaml  order_delivery.yaml
src/mirobot_order_delivery/data/: README.md
src/mirobot_order_delivery/launch/: bridge_only.launch.py  delivery_only.launch.py  robot_only.launch.py  robot_with_bridge.launch.py
src/mirobot_order_delivery/mirobot_order_delivery/: calibration.py  delivery_node.py  geometry.py  robot_gcode.py  simulate_order.py  vision.py
src/vision_robot/: package.xml  setup.py
src/vision_robot/data/: static_board_pose.npz
src/vision_robot/launch/: vision_robot.launch.py
src/vision_robot/vision_robot/: camera_test.py  (+3 more)
test/: execute_move_8x8.sh  execute_move_8x8_before_fast.sh  goto_cell.sh  goto_home.sh  goto_home_before_fast.sh  goto_xy.sh  move_piece.sh  move_piece_8x8.sh  move_piece_8x8_before_fast.sh  move_piece_8x8_before_relay_point.sh  move_piece_8x8_before_zplace.sh  move_xyz.py
topst_console_test/: topst_console_test.py
topst_rule_checker/: rule_checker.py
web_server/app/: main.py  main_before_chess_ui_execute.py  main_before_rank_planner.py  main_before_relay.py
web_server/web/: index.html  index_before_chess_ui.py
