<package format="3">
  <name>mirobot_description</name>
  <version>0.0.1</version>
  <description>Mirobot robot description (URDF/Xacro)</description>
  <maintainer email="tge1375@naver.com">kimsooyoung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
